Updated shell script to use JavaFX modules.