@@ -1,3 +1,3 @@
 git pull
-java -jar ./client/out/artifacts/client_jar/client.jar
+java --module-path /usr/share/openjfx/lib --add-modules ALL-MODULE-PATH -jar ./client/out/artifacts/client_jar/client.jar
 nc -u -l 2222 | mplayer -fps 200 -demuxer h264es -
